fixed about page wrap

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -9,6 +9,7 @@
 .about {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     padding: 20px;
 }
